# greek-text-classifier

./: .gitignore  README.md  ci.patch  plot_ci_fix.patch  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: movies.csv  sample.csv
scripts/: download_nltk.py
src/nlp_project/: __init__.py  api.py  data.py  features.py  legacy_import.py  model.py  predict.py  train.py
src/nlp_project/legacy/: bag_of_words.py  category_predictor.py  custom_hooks.py  frequency.py  frequency_distribution.py  in_built_corpora.py  lemmatizer_demo.py  lookup_tagger.py  play_training_set.py  sentiment_naive_bayes.py  sentiment_vader.py  sklearn_exercise.py  stemmer_demo.py  stemmer_greek_demo.py  test_bigram_tagger.py  test_tagger_mystery_model.py  test_unigram_tagger_split.py  tokenizer_demo.py
tests/: test_api.py
